i can view a list of all my pokemon in the browser

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,5 +11,11 @@
 		background-color: steelblue;
 	}
 	</style>
+
+	<ul>
+		<% pokemon.forEach(function(item) { %>
+			<li> <%= item.name %></li>
+		<% }) %>
+	</ul>
 </body>
 </html>
