i can view a list of all the pokemon in my browser

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,6 +17,20 @@ body {
 }
 </style>
 
+<ul>
+	<h2>Pokemon</h2>
+	<% pokemon.forEach((item) =>{ %>
+		<li> <%= item.name %> </li>
+
+
+	<%})%>
+
+
+
+</ul>
+
+
+
 
 
 
