--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,8 +13,8 @@
 	</style>
 
 	<ul>
-		<% pokemon.forEach(function(item) { %>
-			<li> <%= item.name %></li>
+		<% poke.forEach(function(item) { %>
+			<li> <%= item.name %> </li>
 		<% }) %>
 	</ul>
 </body>
