--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,8 +7,9 @@
 <body>
 <h1>Here are the pokemon:</h1>
 	<% for (i = 0; i < pokemon.length; i++) { %>
+				<a href="http://localhost:3000/pokemon/<%=i%>">
 				<img src="<%=pokemon[i].img%>" alt="">
-				<p><%=pokemon[i].name%><p>
+				<p><%=pokemon[i].name%><p></a>
 	<%}%>
 </body>
 </html>
