--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,5 +7,10 @@
 </head>
 <body>
 	<h1>See All the Pokemon!</h1>
+	<ul>
+		<% pokemon.forEach((i)=>{ %>
+			<li><%= i.name %></li>
+		<% }) %>
+	</ul>
 </body>
 </html>
