Commit 8 - added dynamic anchor tags to index.ejs

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -3,3 +3,7 @@ body {
   background-color: #4682b4;
   font-family: 'Poiret One', cursive;
 }
+body a {
+  color: #FFEBCD;
+  text-decoration: none;
+}
