--- a/public/styles/main.less
+++ b/public/styles/main.less
@@ -5,4 +5,8 @@ body {
   color: @mainColor;
   background-color: @backgroundColor;
   font-family: 'Poiret One', cursive;
+  a {
+  	color: @mainColor;
+  	text-decoration: none;
+  }
 }
