--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,9 +8,9 @@
 <body>
 	<h1>See All the Pokemon!</h1>
 	<ul>
-		<% pokemon.forEach((i)=>{ %>
-			<li><%= i.name %></li>
-		<% }) %>
+		<% for(let i = 0; i < pokemon.length; i++){ %>
+			<li><a href="/pokemon/<%= i %>"><%= pokemon[i].name %><a></li>
+		<% } %>
 	</ul>
 </body>
 </html>
