I can view all my pokemon in the browser

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,5 +12,10 @@
 </head>
 <body>
 	<h1>See All the Pokemon</h1>
+	<ul>
+		<% pokemon.forEach(function(poke){ %>
+			<li><%=poke.name%></li>
+		<%})%>
+	</ul>
 </body>
 </html>
