--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
-	<link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="http://localhost:3000/static/styles/main.css">
+	<% include ../partials/head %>
 </head>
 <body>
 	<h1>See All the Pokemon!</h1>
