created show views of each pokemon

--- a/views/shows.ejs
+++ b/views/shows.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-	<style type="text/css">
+		<style type="text/css">
 		body {
   			color: blanchedalmond;
   			background-color: steelblue;
@@ -11,6 +11,9 @@
 	</style>
 </head>
 <body>
-
+	<h1>Gotta Catch 'Em All</h1>
+	<h2><%=name%></h2>
+	<img src=<%=img%>>
+	<a href='/pokemon'>Back</a>
 </body>
 </html>
