added dynamic anchor tags to index.ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,17 @@ body {
 		<li> <%= item.name %> </li>
 
 
-	<%})%>
+	<% }) %>
+
+	<% for(let i = 0; i < pokemon.length; i++){ %>
+
+	<li>
+
+	 	<a href= /pokemon/<%=i%> > <%=pokemon[i].name %> </a>
+
+	</li>
+
+	<% } %>
 
 
 
