--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,8 +19,8 @@ body {
 
 <ul>
 	<h2>Pokemon</h2>
-	<% pokemon.forEach((item) =>{ %>
-		<li> <%= item.name %> </li>
+	<% pokemon.forEach((poke) =>{ %>
+		<li> <%= poke.name %> </li>
 
 
 	<% }) %>
