--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,12 @@
 <body>
 	<h1>See All The Pokemon!!</h1>
 
-
+	<ul>
+		<% pokemon.forEach((pokemon) => { %>
+				<li><%= pokemon.name%></li>
+		<% }) %>
+	
+	</ul>
 
 
 
