--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,9 +18,9 @@
 	<h1>See All The Pokemon!!</h1>
 
 	<ul>
-		<% pokemon.forEach((pokemon) => { %>
-				<li><%= pokemon.name%></li>
-		<% }) %>
+		<%for (let i = 0; i < pokemon.length; i++){%>
+	<li><a href="/pokemon/<% i %>"><%= pokemon[i].name%></a></li>
+			<%}%>
 	
 	</ul>
 
