--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <style type="text/css">
 	body{
 		background-color: teal;
-		color: pink;
+		color: maroon;
 		font-family: 'Fascinate Inline', cursive;
 	}
 
@@ -11,15 +11,14 @@
 
 <html>
 <head>
-	<link href="https://fonts.googleapis.com/css?family=Fascinate+Inline" rel="stylesheet">
-	<title></title>
+	<% include ../views/partials/head.ejs %>
 </head>
 <body>
 	<h1>See All The Pokemon!!</h1>
 
 	<ul>
 		<%for (let i = 0; i < pokemon.length; i++){%>
-	<li><a href="/pokemon/<% i %>"><%= pokemon[i].name%></a></li>
+	<li><a href="/pokemon/<%= i %>"><%= pokemon[i].name%></a></li>
 			<%}%>
 	
 	</ul>
