Commit 8 - added dynamic anchor tags to index.ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,8 +16,8 @@ body {
 
 <ul>
 <% pokemonIndex.forEach(function(item){ %>
-		<li><%= item.name %></li>
-
+		<a href="/pokemon/x"><li><%= item.name %></li></a>
+		
 	<%})%>
 </ul>
 </body>
