--- a/views/show.ejs
+++ b/views/show.ejs
@@ -22,7 +22,7 @@ body {
 	
 	<h2> <%= poke.name %> </h2>
 
-	<img src='<% pokemon.img%>'>
+	<img src='<%= poke.img%>'>
 
 	<a href="/pokemon">Back</a>
 	
