can view pokemon in browser

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,14 @@
 <h1>
 See all the Pokemon!
 </h1>
+	<ul>
+		<li><%= pocket[0].name %></li>
+		<li><%= pocket[1].name %></li>
+		<li><%= pocket[2].name %></li>
+		<li><%= pocket[3].name %></li>
+		<li><%= pocket[4].name %></li>
+		<li><%= pocket[5].name %></li>
+	</ul>
 <style type="text/css">
 body {
   color:red;
