--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,12 +9,12 @@
 See all the Pokemon!
 </h1>
 	<ul>
-		<li><%= pocket[0].name %></li>
-		<li><%= pocket[1].name %></li>
-		<li><%= pocket[2].name %></li>
-		<li><%= pocket[3].name %></li>
-		<li><%= pocket[4].name %></li>
-		<li><%= pocket[5].name %></li>
+		<a href='./0'><li><%= pocket[0].name %></li></a>
+		<a href='./1'><li><%= pocket[1].name %></li></a>
+		<a href='./2'><li><%= pocket[2].name %></li></a>
+		<a href='./3'><li><%= pocket[3].name %></li></a>
+		<a href='./4'><li><%= pocket[4].name %></li></a>
+		<a href='./5'><li><%= pocket[5].name %></li></a>
 	</ul>
 <style type="text/css">
 body {
