--- a/views/show.ejs
+++ b/views/show.ejs
@@ -5,6 +5,20 @@
 	<link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
 </head>
 <body>
-<h1><%= monsters.name %></h1>
+
+<h1>Gotta Catch 'Em All</h1>
+<br>
+<h2><%= monsters.name %></h2>
+<br>
+<img src=<%= monsters.img %>>
+<br>
+<a href='./'>back</a>
+<style type="text/css">
+	body {
+	  color:red;
+	  background-color:green;
+	  font-family: 'Orbitron', sans-serif;
+	}
+</style>
 </body>
 </html>
