--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,12 +4,17 @@
 	<title></title>
 </head>
 <body>
-<h1> See all the pokemon </h1>
-  <style type="text/css">
-body {
-  color: blanchedalmond;
-  background-color: steelblue;
-}
+	<h1> See all the pokemon </h1>
+	<ul>
+		<% pokemon.forEach((item) => { %>
+			<li> <%= item.name %> </li>
+		<% }) %>
+	</ul>
+	<style type="text/css">
+		body {
+  			color: blanchedalmond;
+  			background-color: steelblue;
+	}
 </style>
 </body>
 </html>
