--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,5 +15,14 @@
 <body>
 	<h1>See All The Pokemon!</h1>
 
+	the name of each pokemon, as a list item, inside an unordered list
+	<ul>
+		<% allPokemon.forEach((item) => { %>
+			<li><%= item.name %></li>
+		<% }) %>
+	</ul>
+
+	this list should be dynamically rendered by ejs based on your data from your 'database'
+
 </body>
 </html>
