--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title></title>
+	<link rel="stylesheet" href="">
+	<style type="text/css">
+		body {
+			color: white;
+			background-color: blue;
+		}
+	</style>
 </head>
 <body>
 
