Commit 9 - Created show views of each pokemon

--- a/views/show.ejs
+++ b/views/show.ejs
@@ -13,6 +13,15 @@
 	</style>
 </head>
 <body>
+	<h1>Gotta Catch 'Em All</h1>
+
+		<h2><%= allPokemon.name %></h2>
+
+		
+		<img src=<%= allPokemon.img %>>
+
+
+		<a href="/pokemon">Back</a>
 
 </body>
 </html>
