Added new form and links to pages

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -1,8 +1,9 @@
 @color: maroon;
-@teal: teal;
+@background: steelblue;
 
 body{
-	background-color: @teal;
+	background-color: @background;
 	color: @color;
+	font-family: 'Fascinate Inline', cursive;
 }
 
