--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,8 @@
 <body>
 	<h1>See All The Pokemon!!</h1>
 
+	<h1><a href="/pokemon/new">Create New</a></h1>
+
 	<ul>
 		<%for (let i = 0; i < pokemon.length; i++){%>
 	<li><a href="/pokemon/<%= i %>"><%= pokemon[i].name%></a></li>
