--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title></title>
+	<link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
 	<h1>See All The Pokemon</h1>
@@ -17,5 +18,7 @@
 			<li> <a href="/pokemon/<%=i%>"> <%= poke[i].name %> </a> </li>
 		<% }%>
 	</ul>
+
+	<script src="/javascripts/app.js"></script>
 </body>
 </html>
