--- a/public/styles/main.less
+++ b/public/styles/main.less
@@ -1,12 +1,20 @@
-@mainColor: #FFEBCD;
-@backgroundColor: #4682b4;
+@mainColor: blanchedalmond;
+@backgroundColor: steelblue;
 
 body {
   color: @mainColor;
   background-color: @backgroundColor;
   font-family: 'Poiret One', cursive;
+  text-align: center;
+  font-weight: bold;
   a {
   	color: @mainColor;
   	text-decoration: none;
+  	font-size: 1.5em;
   }
+}
+
+#add {
+	font-size: 2em;
+	color: maroon;
 }
