--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,8 +7,9 @@
 	<h1>See All the Pokemon!</h1>
 	<ul>
 		<% for(let i = 0; i < pokemon.length; i++){ %>
-			<li><a href="/pokemon/<%= i %>"><%= pokemon[i].name %><a></li>
+			<a href="/pokemon/<%= i %>"><%= pokemon[i].name %><a><br>
 		<% } %>
 	</ul>
+	<a href="/pokemon/new" id="add">Add a new Pokemon!</a>
 </body>
 </html>
