added a link to direct to new page

--- a/views/new.ejs
+++ b/views/new.ejs
@@ -14,7 +14,7 @@
 
 	<form action="/pokemon/create" method="POST">
 		Name: <input type="text" name="name">
-		Image: <input type="text" href="" name="img">
+		Image URL: <input type="text" href="" name="img">
 		<button type="submit">Submit</button>
 	</form>
 	
