--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,6 +19,10 @@
 		<% }%>
 	</ul>
 
+	<div>
+		<a href="/pokemon/new">Add a Pokemon!</a>
+	</div>
+
 	<script src="/javascripts/app.js"></script>
 </body>
 </html>
