--- a/pokemon_app/views/index.ejs
+++ b/pokemon_app/views/index.ejs
@@ -10,6 +10,14 @@
 <body>
 	<h1>See All The Pokemon!</h1>
 
+	<ul> 
+		<% pokemon.forEach((poke) => { %>
+		<li><%= poke.name %></li>
+		<% }) %>
+	</ul>
+
+
+
 	<style type="text/css">
 		body{
 			background-color: pink;
