--- a/pokemon_app/views/index.ejs
+++ b/pokemon_app/views/index.ejs
@@ -11,9 +11,9 @@
 	<h1>See All The Pokemon!</h1>
 
 	<ul> 
-		<% pokemon.forEach((poke) => { %>
-		<li><%= poke.name %></li>
-		<% }) %>
+		<% for (let i=0; i < pokemon.length; i++) { %>
+			<li><a href= "/pokemon/<%= i %>" > <%= pokemon[i].name %><a></li>
+		<% } %>
 	</ul>
 
 
