--- a/views/show.ejs
+++ b/views/show.ejs
@@ -11,9 +11,9 @@
 
 	<h2><%= allPokemon.name %></h2>
 
-	<img src=<%= allPokemon.img %>>
+	<img class="pokeImage" src=<%= allPokemon.img %>>
 
-	<a href="/pokemon">Back</a>
+	<a class="return-list-link" href="/pokemon">Back</a>
 
 </body>
 </html>
