--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,4 +1,24 @@
 body {
-  color: white;
-  background-color: blue;
+  color: darkgreen;
+  background: url('http://wallup.net/wp-content/uploads/2016/05/24/143432-nature-Pokemon.jpg') no-repeat center center fixed;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+}
+h1,
+h2 {
+  text-align: center;
+}
+h1 {
+  font-size: 2.4em;
+}
+.pokeImage {
+  display: block;
+  margin: 0 auto;
+  width: 50%;
+}
+.return-list-link {
+  display: block;
+  padding-top: 10px;
+  text-align: center;
 }
