--- a/views/new.ejs
+++ b/views/new.ejs
@@ -9,7 +9,7 @@
 	<form action="/pokemon/new" method="POST">
 	name: <input type="text" name="name">
 	<br>
-	image url: <input type="text" name="img">
+	image: <input type="text" name="img">
 	<button type="submit">Submit to Pokedex</button>
 	</form>
 </body>
