created edit page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title></title>
-	<link rel="stylesheet" href="./styles/style.css">
+	<link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
 
@@ -12,10 +12,7 @@
 <h1>SEE ALL THE POKEMON!</h1>
 
 <style type="text/css">
-body {
-  color: blanchedalmond;
-  background-color: steelblue;
-}
+
 </style>
 
 <ul>
