--- a/views/new.ejs
+++ b/views/new.ejs
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title></title>
+	<link rel="stylesheet" href="/styles/style.css">
 
 </head>
 <body>
@@ -12,7 +13,7 @@
 
 	<form action="/pokemon/create" method="POST">
 		Name: <input type="text" name="name">
-		Image: <input type="text" href="" name="img">
+		Image: <input type="text" name="img">
 		<button type='submit'>Submit</button>
 	</form>
 
