--- a/views/show.ejs
+++ b/views/show.ejs
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title></title>
+	<link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
 
@@ -11,6 +12,8 @@
 <h1>SEE ALL THE POKEMON!</h1>
 
 <style type="text/css">
+
+
 
 </style>
 
