--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,9 +24,16 @@
 
 	<li>
 
+
 	 	<a href= /pokemon/<%=i%> > <%=pokemon[i].name %> </a>
 
 	</li>
+
+		<form action="/pokemon/<%= i %>?_method=DELETE" method="POST">
+
+		<button type="submit">DELETE</button>
+
+		</form>
 
 	<% } %>
 
