--- a/public/styles/style.less
+++ b/public/styles/style.less
@@ -1,4 +1,20 @@
+@font-face {
+	font-family: 'pokemon';
+	src: url("../fonts/pokemonsolid.ttf") format("truetype");
+}
+
+@steel: steelblue;
+@amarillo: yellow;
+
 body {
-	background-color: blue;
-	color: red;
+	background-color: @steel;
+	color: @amarillo;
+	font-family: 'pokemon';
+	display: table;
+	margin: auto;
+	vertical-align: middle;
+}
+
+#break {
+	margin-bottom: 20px;
 }
