--- a/views/new.ejs
+++ b/views/new.ejs
@@ -2,19 +2,14 @@
 <html>
 <head>
 	<title></title>
+	<link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
 	<h1>Add a Pokemon</h1>
-	<style type="text/css">
-	body {
-		color: white;
-		background-color: steelblue;
-	}
-	</style>
 
 	<form action="/pokemon/create" method="POST">
 		Name: <input type="text" name="name">
-		Image URL: <input type="text" href="" name="img">
+		Image URL: <input type="text" name="img">
 		<button type="submit">Submit</button>
 	</form>
 	
