--- a/views/show.ejs
+++ b/views/show.ejs
@@ -2,15 +2,10 @@
 <html>
 <head>
 	<title></title>
+	<link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
 	<h1>Gotta Catch 'Em All</h1>
-	<style type="text/css">
-	body {
-		color: white;
-		background-color: steelblue;
-	}
-	</style>
 
 		<h2> <%= poke.name %> </h2>
 		
