got delete and edit page working

--- a/views/show.ejs
+++ b/views/show.ejs
@@ -3,13 +3,14 @@
 <head>
 	<link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
 	<title></title>
-<style type="text/css">
+	<link rel="stylesheet" href="/styles/style.css">
+<!-- /*<style type="text/css">
 body {
   color: blanchedalmond;
   background-color: steelblue;
   font-family: 'Indie Flower', cursive;
 }
-</style>
+</style>*/ -->
 </head>
 <body>
 <h1>'Gotta Catch 'Em All!'</h1>
