--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,6 +17,9 @@
 			<li>
 				<a href='/pokemon/<%=i%>'><%=pokemon[i].name%></a>
  			</li>
+ 			<form action="/pokemon/<%= i %>?_method=DELETE" method="POST">
+			<button type="submit">Delete</button>
+		</form>
  		<%}%>
 </ul>
 <script src="/javascripts/app.js"></script>
