added put and delete

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,13 +2,7 @@
 <html>
 <head>
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-		<style type="text/css">
-		body {
-  			color: blanchedalmond;
-  			background-color: steelblue;
-  			font-family: 'Roboto', sans-serif;
-		}
-	</style>
+	<link rel='stylesheet' href="/style/style.css">
 </head>
 <body>
 	<h1>See All the Pokemon</h1>
