--- a/views/shows.ejs
+++ b/views/shows.ejs
@@ -2,18 +2,20 @@
 <html>
 <head>
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-		<style type="text/css">
-		body {
-  			color: blanchedalmond;
-  			background-color: steelblue;
-  			font-family: 'Roboto', sans-serif;
-		}
-	</style>
+	<link rel='stylesheet' href="/style/style.css">
 </head>
 <body>
 	<h1>Gotta Catch 'Em All</h1>
-	<h2><%=name%></h2>
-	<img src=<%=img%>>
-	<a href='/pokemon'>Back</a>
+	<h2><%=pokemon.name%></h2>
+	<img src=<%=pokemon.img%>>
+	<a href='/pokemon'><button>Back</button></a>
+	<form action='/pokemon/<%=i%>?_method=DELETE' method='POST'>
+		<button type='submit'>Delete</button>
+	</form>
+	<form action='/pokemon/<%=i%>?_method=PUT' method='POST'>
+		Name: <input type="text" name="name" value='<%=pokemon.name%>'>
+		Image: <input type="text" name="img" value='<%=pokemon.img%>'>
+		<button type='submit'>Edit</button>
+	</form>
 </body>
 </html>
