--- a/pokemon_app/views/show.ejs
+++ b/pokemon_app/views/show.ejs
@@ -6,14 +6,21 @@
 	<title></title>
 	<link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="/styles/style.css">
+
 </head>
 <body>
 
 	<h1>Gotta Catch 'Em All!</h1>
 
 	<h2><%= thisPokemon.name %></h2>
-	<img src="<%= thisPokemon.img %>">
-	<a href="/pokemon">back</a>
+	<div>
+		<img src="<%= thisPokemon.img %>"></body></br>
+	</div>
+	<form action="/pokemon/<%= index %>?_method=DELETE" method="POST">		
+						<button type="submit" name="Delete" id="delete">Delete</button>
+	</form></br>
+	<a href="/pokemon" id="back">back</a>
+
 
 </body>
 </html>
