--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,10 +7,12 @@
 <h1>
 See all the Pokemon!
 </h1>
-	<ul>
+	<ul id="list">
 		<% for(let i = 0; i < pocket.length; i++){ %>
 			<li>
-				<a href='/pokemon/<%= i %>'> <%= pocket[i].name %> </a>
+				<a href='/pokemon/<%= i %>'> <%= pocket[i].name %> </a> <form action="/pokemon/<%= i %>?_method=DELETE" method="POST">
+					<button type="submit">Delete</button>
+				</form>
 			</li>
 		<% } %>
 	</ul>
