Created delete and edit methods and added new pages and buttons to allow users to run such methods

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,11 +12,17 @@
 	<ul>
 		<% allPokemon.forEach((item, i) => { %>
 			<li><%= item.name %></li>
+			<% if (item.placement === true) { %>
+				Currently on Team<br>
+			<% } %>
 			<a href=<%="/pokemon/" + i%>>Click</a>
 			<% i++ %>
+			<form action="/pokemon/<%= i %>?_method=DELETE" method="POST">
+				<button type="submit">Release Pokemon</button>
+			</form>
 		<% }) %>
 	</ul>
 
-
+	<script src="/javascripts/app.js"></script>
 </body>
 </html>
