--- a/views/new.ejs
+++ b/views/new.ejs
@@ -11,9 +11,10 @@
 	<form action="/pokemon/create" method="POST">
 		Name: <input type="text" name="name">
 		Img: <input type="text" name="img">
-		on Team: <input type="checkbox" name="placement">
+		IsOnTeam: <input type="checkbox" name="placement">
 		<button type="submit">Submit</button>
 	</form>
 
+	<script src="/javascripts/app.js"></script>
 </body>
 </html>
