--- a/public/styles/style.less
+++ b/public/styles/style.less
@@ -1,10 +1,12 @@
 @steelblue: steelblue;
 @blanchedalmond: blanchedalmond;
-
+@Modak: 'Modak', cursive;
 
 
 body{
   color: @blanchedalmond;
   background-color: @steelblue;
+  font-family: @Modak;
+
 
 }
