--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link href="https://fonts.googleapis.com/css?family=Modak" rel="stylesheet">
+
 	<title></title>
 	<link rel="stylesheet" href="/styles/style.css">
 </head>
